added apis for notification
